--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>jfreechart</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
